# mcp-bio

./: .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CHECKLIST.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DEAD-CODE-EVALUATION.md  Makefile  PATTERN.md  README.md  RUN.md  TEST-REBUILD.md  THIRD_PARTY_ENDPOINTS.md  build.rs  deny.toml  index.html  manifest.json  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.march/: blueprint.md  code-review-log.md  publish-report.md  validation-profiles.toml  verify-log.md
ERROR_HANDLING/: index.html
FDA_SECURITY/: index.html
HTTP_CLIENT_GUIDE/: index.html
INTEGRATION_TESTING/: index.html
MIGRATION_EXAMPLES/: index.html
architecture/experiments/24-diagnostic-entity-landscape/scripts/: build_full_scale_landscape.py  common.py  cross_source_matrix.py  diagnostic_landscape_lib.py  fda_device_probe.py  gtr_api_probe.py  gtr_bulk_probe.py  live_latency_noise_probe.py  pyproject.toml  regression_control.py  run_all_probes.py  who_ivd_probe.py
architecture/experiments/24-diagnostic-entity-landscape/scripts/diagnostic_landscape/: __init__.py  design.py  io.py  landscape.py  probes.py  types.py
architecture/experiments/244-obsidian-vault-knowledge-base-with-pdf-to-markdown/scripts/rust_probe/: Cargo.toml
architecture/experiments/244-obsidian-vault-knowledge-base-with-pdf-to-markdown/scripts/rust_probe/src/: lib.rs  main.rs
architecture/experiments/245-biomedical-news-discovery-and-personalized-briefing/scripts/: news_common.py  news_discovery_probe.py  news_entity_briefing.py  news_extract_articles.py  news_pipeline.py  pyproject.toml
architecture/experiments/245-biomedical-news-discovery-and-personalized-briefing/scripts/biomcp_news_spike/: __init__.py  cli.py  io.py  pipeline.py  types.py
architecture/experiments/25-who-vaccines-and-apis/scripts/: api_linkage_probe.py  build_full_scale_results.py  pyproject.toml  regression_control.py  run_all_probes.py  schema_probe.py  vaccine_identity_probe.py  vaccine_metadata_and_device_probe.py  validate_vaccines.py  who_vaccines_apis_exploit.py  who_vaccines_apis_lib.py
architecture/experiments/25-who-vaccines-and-apis/scripts/who_vaccines_apis/: __init__.py  cli.py  identity.py  io.py  loaders.py  probes.py  reports.py  types.py
changelog/: index.html
coverage/: BASELINE.md
docs/: index.md  troubleshooting.md
error-handling/: index.html
examples/: README.md
faq-condensed/: index.html
genomoncology/: index.html
http-client-guide/: index.html
integration-testing/: index.html
migration-examples/: index.html
performance-optimizations/: index.html
policies/: index.html
scripts/: check-no-server-tests.sh  contract-smoke.sh  pre-commit-reject-march-artifacts.sh  run-specs.sh  validate-skills.sh
search/: search_index.json
skills/: SKILL.md  jq-examples.md
spec/: 01-overview.md  02-gene.md  (+25 more)
(+1155 files in other folders)
