[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "biomcp-news-spike"
version = "0.1.0"
description = "Importable library for the BioMCP biomedical news discovery spike"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "python-dateutil>=2.9",
  "requests>=2.32",
  "trafilatura>=2.0",
]

[project.scripts]
biomcp-news-pipeline = "biomcp_news_spike.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["biomcp_news_spike*"]
