[package]
name = "biomcp-kb-rust-probe"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "biomcp_kb_rust_probe"
path = "src/lib.rs"

[[bin]]
name = "biomcp-kb-rust-probe"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
html2md = "0.2.15"
pdf_oxide = { version = "0.3.34", default-features = false }
readability-rust = "0.1.0"
regex = "1"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unpdf = "0.4.5"
